--- a/recipes/jollof-rice.html
+++ b/recipes/jollof-rice.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Jollof Rice</title>
 </head>
 <body>
     <h1>Jollof Rice</h1>
