Link index.html and jollof-rice.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Home page</title>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="/recipes/jollof-rice.html">Recipe Title</a>
 </body>
 
 </html>
