--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Home page</title>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/jollof-rice.html">Recipe Title</a>
+    <a href="recipes/jollof-rice.html">Recipe Title</a>
 </body>
 
 </html>
