Add recipe description to jollof-rice.html

--- a/recipes/jollof-rice.html
+++ b/recipes/jollof-rice.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Jollof Rice</h1>
     <img src="https://www.allrecipes.com/thmb/w1JmxWuAiqpExEhQufg_jrM_7yQ=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7499757JollofriceChefJohn4x3-d601da10d7e845d1ad4c8656a5b87ed4.jpg" alt="Picture of Jollof Rice">
+    <p>This is a foolproof recipe for cooking Jollof rice, West Africa’s most popular dish. I like to serve it as a main with stewed chicken and fried plantains.</p>
 </body>
 </html>
 </head>
