Add links for recipe pages to index.html  and Edit page title

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <head>
 <html lang="en">
     <meta charset="UTF-8">
-    <title>Home page</title>
+    <title>Wisdom's Recipes/title>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/jollof-rice.html">Recipe Title</a>
+    <a href="recipes/jollof-rice.html">Jollof Rice</a>
+    <a href="recipes/kaldereta.html">Kaldereta</a>
+    <a href="recipes/lasagna.html">Lasagna</a>
 </body>
 
 </html>
