Fix bug, stray start tag. <head> before <html> so blank page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<head>
+
 <html lang="en">
+<head>
     <meta charset="UTF-8">
     <title>Wisdom's Recipes/title>
+</head>
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/jollof-rice.html">Jollof Rice</a>
