Fix bug, stray </html> tag in index.html, and kalderata.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Wisdom's Recipes/title>
+    <title>Wisdom's Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
@@ -13,4 +13,3 @@
 </body>
 
 </html>
-</head>
