Edit index.html and make recipe links a list. Edit index.html recipe list so they open in separate tabs. Edit title

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/jollof-rice.html">Jollof Rice</a>
-    <a href="recipes/kaldereta.html">Kaldereta</a>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li> <a href="recipes/jollof-rice.html" target="_blank" rel="noopener noreferrer" >Jollof Rice</a></li>
+        <li><a href="recipes/kaldereta.html" target="_blank" rel="noopener noreferrer" >Kaldereta</a></li>
+        <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer" >Lasagna</a></li>
+    </ul>
+
+    
 </body>
 
 </html>
