Add alt to recipes image

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Homemade Lasagna</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Ff5fb06bae980ae5f3bc67b14d71ff4f5%2F17058790206771000019936.jpg&q=60&c=sc&poi=auto&orient=true&h=512">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Ff5fb06bae980ae5f3bc67b14d71ff4f5%2F17058790206771000019936.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="Picture of Lasagna">
     <p>A great lasagna only needs two things: a thick, rich, super-meaty sauce (and lots of it!) and a ricotta filling where only the finest cheeses are welcomed. For the sauce, I love a 50-50 combo of Italian sausage and lean ground beef.</p>
     
     <h2>Ingredients(Adjust according to servings)</h2>
