Add styles.css and create styles for homepage

--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link  rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <div class="title"><h1>Odin Recipes</h1></div>
     <ul>
-        <li> <a href="recipes/jollof-rice.html" target="_blank" rel="noopener noreferrer" >Jollof Rice</a></li>
-        <li><a href="recipes/kaldereta.html" target="_blank" rel="noopener noreferrer" >Kaldereta</a></li>
-        <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer" >Lasagna</a></li>
-    </ul>
-
-    
+        <li class="list" id="one"> <a href="recipes/jollof-rice.html" target="_blank" rel="noopener noreferrer" >Jollof Rice</a></li>
+        <li class="list" id="two"><a href="recipes/kaldereta.html" target="_blank" rel="noopener noreferrer" >Kaldereta</a></li>
+        <li class="list" id="three"><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer" >Lasagna</a></li>
+    </ul> 
 </body>
 
 </html>
